# workUp

./: .env  .gitignore  .gitmodules  README.md  config.py.sample  create_admin.py  create_lcec_admin.py  elm_app.py  install_current_workup_db.sh  lcecAcademy.py  nano.save  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt  run_tests.sh  unikey_portal.py  workup.py
app/: __init__.py  assignmentsModel.py  config.py  config.py.sample  email_model.py  errors.py  fileModel.py  fileStatsModel.py  forms.py  forms_peer_review.py  models.py  models_files.py  upDownTools.py  util.py  views.py  views_admin.py  views_files.py  views_user.py
app/admin/: forms.py  routes.py
app/api/: __init__.py  forms.py  models.py  routes.py  schemas.py
app/assignments/: __init__.py  formbuilder.py  forms.py  forms_peer_review.py  models.py  routes.py
app/classes/: __init__.py  forms.py  models.py  routes.py
app/collaboration/: __init__.py  models.py  routes.py
app/errors/: handlers.py
app/files/: __init__.py  forms.py  models.py  routes.py
app/gradebook/: __init__.py  forms.py  models.py  routes.py
app/gradebook/templates/: create_gradebook_template.html  create_live_assessment.html  gradebook_index.html
app/grammar/: __init__.py  forms.py  models.py  routes.py
app/main/: __init__.py  forms.py  models.py  routes.py
app/static/: ads.txt  workUp_manifest.json
app/static/bootstrap/: mdb.lite.min.css
app/static/css/: 500.css  cat.css  elm-sidebar-style.css  firepad-userlist.css  index.css  index_Unikey.css  index_elmOnline.css  index_workUp.css  lcec-sidebar-style.css  library_card.css  no-more-tables.css  panda.css  timeline.css  workup-dark-mode.css  workup-sidebar-style.css
app/static/errors/: 403.css  404.css  index.css  progress-circle.css
app/static/js/: class_library.js  config.js  config.js.template  config_LCECAcademy.js  config_Unikey.js  config_elmOnline.js  copy.js.template  pusher.js  searchable-table.js  sortable-table.js
app/static/uploads/: readme
app/templates/: 404.html  addPeerReviewForm.html  classAdmin.html  classadmin.html  comments.html  confirmation_form.html  consultancies.html  contact.html  createassignment.html  createclass.html  downloadFile.html  elm_admissions.html  elm_inquire.html  elm_nav_product.html  elm_nav_product_static_pages.html  elm_product.html  features.html  feedback.html  fileStats.html  fileUpload.html  fileUploaded.html  header.html  header_Unikey.html  header_elmOnline.html  header_product.html  header_workUp.html  index.html  index_LCECAcademy.html  index_Unikey.html  index_elmOnline.html  index_workUp.html  inquire.html  inquiry.html  login.html  nav_product_main.html  nav_product_static_pages.html  peerReviewFormAdmin.html  peerreviewform.html  product.html  register.html  (+6 more)
app/templates/admin/: batch_import_students_preview.html  class_admin.html  create_assignment.html  create_class.html  manage_users.html  (+1 more)
app/user/: __init__.py  forms.py  models.py  routes.py
migrations/versions/: 5a4eeea74f88_add_downloads_table.py  788fc4f20cfa_add_last_seen_field_in_user.py  93c207cc831a_users_table.py  be2ffa20f3a4_.py
workUp/: __init__.py  config.py
workUp/templates/: fileUpload.html  fileUploaded.html  header.html
(+130 files in other folders)
