[tool.poetry]
name = "workup"
version = "2"
description = "Learning Management Software"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
prowritingaidsdk = {git = "https://github.com/prowriting/prowritingaid.python.git", develop = true, rev = "99b7dccd73575f806ff28e3e515d3e782ef4d9ca"}
alembic = "==1.0.10"
aniso8601 = "==8.0.0"
appdirs = "==1.4.4"
arrow = "==0.13.1"
atomicwrites = "==1.3.0"
attrs = "==19.1.0"
blinker = "==1.4"
cairocffi = "==1.1.0"
certifi = "==2019.3.9"
cffi = "==1.14.0"
chardet = "==3.0.4"
click = "==7.0"
cryptography = "==2.9.2"
cssselect2 = "==0.3.0"
decorator = "==4.4.0"
defusedxml = "==0.6.0"
distlib = "==0.3.0"
dominate = "==2.3.5"
filelock = "==3.0.12"
flask-marshmallow = "==0.13.0"
flask-oidc = "==1.4.0"
html5lib = "==1.0.1"
httplib2 = ">=0.18.0"
idna = "==2.8"
importlib-metadata = "==1.6.1"
infinity = "==1.4"
intervals = "==0.8.1"
itsdangerous = "==1.1.0"
jdcal = "==1.4.1"
limits = "==1.3"
lml = "==0.0.9"
marshmallow-sqlalchemy = "==0.23.1"
marshmallow = "==3.6.1"
more-itertools = "==7.0.0"
ndg-httpsclient = "==0.5.1"
oauth2client = "==4.1.3"
okta = "==0.0.4"
openpyxl = "==3.0.3"
pathlib = "==1.0.1"
pbr = "==5.4.5"
pluggy = "==0.9.0"
pusher = "==3.0.0"
py = "==1.8.0"
pyasn1-modules = "==0.2.5"
pyasn1 = "==0.4.5"
pycparser = "==2.20"
pyexcel-io = "==0.5.20"
pyexcel-webio = "==0.1.4"
pyexcel-xlsx = "==0.5.8"
pyexcel = "==0.6.2"
pyparsing = "==2.4.0"
pytest-flask = "==0.14.0"
pytest = "==4.4.1"
python-dateutil = "==2.8.0"
python-dotenv = "==0.13.0"
python-editor = "==1.0.4"
pytz = "==2020.1"
qrcode = "==6.1"
redis = "==3.2.1"
requests = "==2.21.0"
rsa = "==4.0"
six = "==1.12.0"
texttable = "==1.6.2"
tinycss2 = "==1.0.2"
urllib3 = "==1.24.3"
validators = "==0.15.0"
virtualenv-clone = "==0.5.4"
virtualenv = "==20.0.21"
visitor = "==0.1.3"
webencodings = "==0.5.1"
xlrd = "==1.2.0"
xvfbwrapper = "==0.2.9"
zipp = "==3.1.0"
zipstream = "==1.1.4"
Flask-Compress = {git = "https://github.com/colour-science/flask-compress.git", develop = true, rev = "7cfbd5af9dac6aca9df833dd3a73ed9fc8adade3"}
Brotli = "==1.0.7"
CairoSVG = "==2.4.2"
et_xmlfile = "==1.0.1"
Flask-Dropzone = "==1.5.4"
Flask-Excel = "==0.0.7"
Flask-Executor = "==0.9.4"
Flask-HTTPAuth = "==3.2.4"
Flask-Limiter = "==1.0.1"
Flask-Login = "==0.5.0"
Flask-Mail = "==0.9.1"
Flask-Migrate = "==2.4.0"
Flask-QRcode = "==3.0.0"
Flask-RESTful = "==0.3.8"
Flask-SQLAlchemy = "==2.4.4"
Flask-Toastr = "==0.5.2"
Flask-WeasyPrint = "==0.6"
Flask-WTF = "==0.14.2"
Flask = "==1.1.2"
Jinja2 = "==2.10.1"
Mako = "==1.0.9"
MarkupSafe = "==1.1.1"
Pillow = "==7.1.2"
PyMySQL = "==0.9.3"
PyNaCl = "==1.4.0"
pyOpenSSL = "==19.1.0"
Pyphen = "==0.9.5"
SQLAlchemy-Utils = "==0.33.11"
SQLAlchemy = "==1.3.19"
Wand = "==0.5.3"
WeasyPrint = "==51"
Werkzeug = "==0.16.1"
WTForms-Alchemy = "==0.16.9"
WTForms-Components = "==0.10.4"
WTForms = "==2.2.1"
bootstrap-flask = "*"
pylint-flask = "*"
flask-talisman = "*"
flask-seasurf = "*"
xpinyin = "*"
flask-breadcrumbs = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
